--- a/src/main/resources/templates/training/index.html
+++ b/src/main/resources/templates/training/index.html
@@ -1,23 +1,76 @@
-<!DOCTYPE html>
+<!doctype html>
 <html xmlns:th="http://www.thymeleaf.org">
-
 <head>
-	<meta charset="UTF-8">
-	<title th:text="${title}">Insert title here</title>
-</head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+	<meta name="generator" content="Hugo 0.83.1">
+	<title th:text="${title}">Top navbar example · Bootstrap v5.0</title>
+
+	<link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/navbar-static/">
+
+	 <!-- Bootstrap core CSS -->
+	<link href="/docs/5.0/dist/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
+
+    <!-- Favicons -->
+	<link rel="apple-touch-icon" href="/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
+	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
+	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
+	<link rel="manifest" href="/docs/5.0/assets/img/favicons/manifest.json">
+	<link rel="mask-icon" href="/docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
+	<link rel="icon" href="/docs/5.0/assets/img/favicons/favicon.ico">
+	<meta name="theme-color" content="#7952b3">
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+    </style>
+
+
+    <!-- Custom styles for this template -->
+    <link href="navbar-top.css" th:href="@{/css/navber-top.css}" rel="stylesheet">
+  </head>
 
 <body>
-	<h1 th:text="${title}">title</h1>
-	<table>
-	<tr>
-		<th>id</th><th>menu</th><th>datetime</th>
-	</tr>
-	<tr th:each="training : ${trainingList}">
-		<td th:text="${training.id}">1</td>
-		<td th:text="${training.menu}">menu</td>
+	<div th:replace="~{block/header::headerA}"></div>
+
+	<main class="container">
+  	<div class="bg-light p-5 rounded">
+	<h1 th:text="${title}">Navbar example</h1>
+	</div>
+
+	<table class="table table-striped">
+	<thead>
+		<tr >
+			<th scope="col">No.</th>
+			<th scope="col">部位</th>
+			<th scope="col">メニュー</th>
+			<th scope="col">実施日</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr th:each="training : ${trainingList}">
+			<th scope="row" th:text="${training.id}">1</th>
+			<td th:text="${training.part}">part</td>
+			<td th:text="${training.menu}">menu</td>
 			<td th:text="${training.datetime}">datetime</td>
-	</tr>
+		</tr>
+	</tbody>
 	</table>
+	</main>
+    <script src="/docs/5.0/dist/js/bootstrap.bundle.min.js" th:src="@{/js/bootstrap.bundle.min.js}" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
 </body>
 
 </html>
